So many fixes and refactoring
KISS and DUMBO applied to clean up code.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   ##cupertino_icons: ^1.0.6 # This is an asset repo for Cupertino widgets.
   flutter_bloc: ^8.1.5 # A predictable state management library that helps implement the BLoC design pattern
   flutter_modular: ^6.3.2 # Smart project structure with dependency injection and route management
-  nosql_dart:
-    git: https://github.com/GitHubStuff/nosql_dart.git
+  # nosql_dart:
+  #   git: https://github.com/GitHubStuff/nosql_dart.git
   ui_extensions_flutter:
     git: https://github.com/GitHubStuff/ui_extensions_flutter.git
   ui_theme_mode_flutter:
