Installtion/use is now one line:
void main() {
  WidgetsFlutterBinding.ensureInitialized();
  return runApp(const ThemeModeSetup(homeScreen: HomeScaffold()));
}

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   ##app_settings: ^5.1.1 # A Flutter plugin for opening iOS and Android phone settings from an app.
   ##cupertino_icons: ^1.0.6 # This is an asset repo for Cupertino widgets.
   flutter_bloc: ^8.1.5 # A predictable state management library that helps implement the BLoC design pattern
-  flutter_modular: ^6.3.2 # Smart project structure with dependency injection and route management
+  # flutter_modular: ^6.3.3 # Smart project structure with dependency injection and route management
   # nosql_dart:
   #   git: https://github.com/GitHubStuff/nosql_dart.git
   ui_extensions_flutter:
