--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.5
   hive_flutter: ^1.1.0
+  flutter_modular: ^6.3.3
   nosql_dart:
     path: ../nosql_dart
     #git: https://github.com/GitHubStuff/nosql_dart.git
