--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ui_theme_mode_flutter
 description: "Controls/Persists/Notifies of changes in theme"
-version: 0.0.2+1
+version: 0.0.3+1
 home_page: http://www.icodeforyou.com
 publish_to: none # Remove this line if you wish to publish to pub.dev
 
@@ -16,8 +16,8 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_modular: ^6.3.3
   nosql_dart:
-    path: ../nosql_dart
-    #git: https://github.com/GitHubStuff/nosql_dart.git
+    git: https://github.com/GitHubStuff/nosql_dart.git
+    #path: ../nosql_dart
   ui_extensions_flutter:
     git: https://github.com/GitHubStuff/ui_extensions_flutter.git
 
