--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,5 @@ coverage/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 /.flutter-plugins-dependencies
+example/.flutter-plugins-dependencies
+example/.flutter-plugins-dependencies
