--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   ##app_settings: ^5.1.1 # A Flutter plugin for opening iOS and Android phone settings from an app.
   ##cupertino_icons: ^1.0.6 # This is an asset repo for Cupertino widgets.
   flutter_bloc: ^8.1.5 # A predictable state management library that helps implement the BLoC design pattern
+  gap: ^3.0.1
   # flutter_modular: ^6.3.3 # Smart project structure with dependency injection and route management
   # nosql_dart:
   #   git: https://github.com/GitHubStuff/nosql_dart.git
@@ -28,7 +29,7 @@ dev_dependencies:
   build_runner: ^2.4.9 # provides a concrete way of generating files using Dart code
   flutter_gen_runner: ^5.4.0 # The Flutter code generator for your assets, fonts, colors
   flutter_launcher_icons: ^0.13.1 # A command-line tool that simplifies updating Flutter app's launcher icon
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   flutter_test: # Testing library for flutter, built on top of package:test.
     sdk: flutter
 
