enhancement to routes and binding

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ coverage/
 /.flutter-plugins-dependencies
 example/.flutter-plugins-dependencies
 example/.flutter-plugins-dependencies
+/example/.flutter-plugins-dependencies
